// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visual Regression Tests > Badge Component Screenshots > should match badge groups screenshot 1`] = `
<div
  class="p-4 bg-white space-y-4"
>
  <div
    class="flex flex-wrap gap-1"
  >
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-border px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        React
      </span>
    </div>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-border px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        TypeScript
      </span>
    </div>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-border px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        Tailwind
      </span>
    </div>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-border px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        Storybook
      </span>
    </div>
  </div>
  <div
    class="flex flex-wrap gap-1"
  >
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80 px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        New
      </span>
    </div>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        Updated
      </span>
    </div>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80 px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        Deprecated
      </span>
    </div>
  </div>
  <div
    class="flex items-center gap-2"
  >
    <span>
      Status:
    </span>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-border px-2.5 py-0.5 text-xs rounded-full border-green-500 text-green-700"
    >
      <span
        class="truncate"
      >
        <span
          class="w-2 h-2 bg-green-500 rounded-full mr-1"
        />
        Active
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Badge Component Screenshots > should match badge variants screenshot 1`] = `
<div
  class="p-4 bg-white"
>
  <div
    class="flex flex-wrap gap-2"
  >
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80 px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        Default
      </span>
    </div>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        Secondary
      </span>
    </div>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80 px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        Destructive
      </span>
    </div>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-border px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        Outline
      </span>
    </div>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80 px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        123
      </span>
    </div>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        <span
          class="w-2 h-2 bg-green-500 rounded-full mr-1"
        />
        Online
      </span>
    </div>
    <div
      class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-border px-2.5 py-0.5 text-xs rounded-full"
    >
      <span
        class="truncate"
      >
        🔥 Hot
      </span>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Button Component Screenshots > should match button states screenshot 1`] = `
<div
  class="p-4 space-y-2 bg-white"
>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
  >
    Normal
  </button>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    disabled=""
  >
    Disabled
  </button>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    disabled=""
  >
    <svg
      class="mr-2 h-4 w-4 animate-spin"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    Loading
  </button>
  <button
    class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    disabled=""
  >
    <svg
      class="mr-2 h-4 w-4 animate-spin"
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        class="opacity-25"
        cx="12"
        cy="12"
        r="10"
        stroke="currentColor"
        stroke-width="4"
      />
      <path
        class="opacity-75"
        d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
        fill="currentColor"
      />
    </svg>
    Please wait...
  </button>
</div>
`;

exports[`Visual Regression Tests > Button Component Screenshots > should match button variants screenshot 1`] = `
<div
  class="p-4 space-y-2 bg-white"
>
  <div
    class="space-x-2"
  >
    <button
      class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    >
      Default
    </button>
    <button
      class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive text-destructive-foreground hover:bg-destructive/90 h-10 px-4 py-2"
    >
      Destructive
    </button>
    <button
      class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
    >
      Outline
    </button>
    <button
      class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-secondary text-secondary-foreground hover:bg-secondary/80 h-10 px-4 py-2"
    >
      Secondary
    </button>
    <button
      class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
    >
      Ghost
    </button>
    <button
      class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-primary underline-offset-4 hover:underline h-10 px-4 py-2"
    >
      Link
    </button>
  </div>
  <div
    class="space-x-2"
  >
    <button
      class="inline-flex items-center justify-center text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 h-9 rounded-md px-3 bg-primary text-primary-foreground hover:bg-primary/90"
    >
      Small
    </button>
    <button
      class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    >
      Default
    </button>
    <button
      class="inline-flex items-center justify-center text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 h-11 rounded-md px-8 bg-primary text-primary-foreground hover:bg-primary/90"
    >
      Large
    </button>
    <button
      class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 h-10 w-10 bg-primary text-primary-foreground hover:bg-primary/90"
    >
      🔍
    </button>
  </div>
  <div
    class="space-x-2"
  >
    <button
      class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      disabled=""
    >
      Disabled
    </button>
    <button
      class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      disabled=""
    >
      <svg
        class="mr-2 h-4 w-4 animate-spin"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          class="opacity-25"
          cx="12"
          cy="12"
          r="10"
          stroke="currentColor"
          stroke-width="4"
        />
        <path
          class="opacity-75"
          d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
          fill="currentColor"
        />
      </svg>
      Loading
    </button>
    <button
      class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
    >
      <span
        class="mr-2"
      >
        <span>
          ←
        </span>
      </span>
      With Icon
    </button>
  </div>
</div>
`;

exports[`Visual Regression Tests > Card Component Screenshots > should match card layouts screenshot 1`] = `
<div
  class="p-4 space-y-4 bg-gray-50"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm border-border"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <h3
        class="text-2xl font-semibold leading-none tracking-tight"
      >
        Basic Card
      </h3>
      <p
        class="text-sm text-muted-foreground"
      >
        Simple card layout
      </p>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        This is the card content.
      </p>
    </div>
    <div
      class="flex items-center p-6 pt-0"
    >
      <button
        class="inline-flex items-center justify-center text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 h-9 rounded-md px-3 bg-primary text-primary-foreground hover:bg-primary/90"
      >
        Action
      </button>
    </div>
  </div>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm border-border"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="flex items-center justify-between"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight"
        >
          Card with Badge
        </h3>
        <div
          class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80 px-2.5 py-0.5 text-xs rounded-full"
        >
          <span
            class="truncate"
          >
            New
          </span>
        </div>
      </div>
    </div>
    <div
      class="p-6 pt-0"
    >
      <p>
        Card with badge in header.
      </p>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Card Component Screenshots > should match complex card screenshot 1`] = `
<div
  class="p-4 bg-white"
>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm border-border"
  >
    <div
      class="flex flex-col space-y-1.5 p-6"
    >
      <div
        class="flex items-start justify-between"
      >
        <div>
          <h3
            class="text-2xl font-semibold leading-none tracking-tight"
          >
            Project Dashboard
          </h3>
          <p
            class="text-sm text-muted-foreground"
          >
            Overview of your projects
          </p>
        </div>
        <div
          class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 px-2.5 py-0.5 text-xs rounded-full"
        >
          <span
            class="truncate"
          >
            3 Active
          </span>
        </div>
      </div>
    </div>
    <div
      class="p-6 pt-0 space-y-4"
    >
      <div
        class="grid grid-cols-2 gap-4"
      >
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            12
          </div>
          <div
            class="text-sm text-gray-500"
          >
            Completed
          </div>
        </div>
        <div
          class="text-center"
        >
          <div
            class="text-2xl font-bold"
          >
            3
          </div>
          <div
            class="text-sm text-gray-500"
          >
            In Progress
          </div>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="flex items-center justify-between"
        >
          <span>
            Website Redesign
          </span>
          <div
            class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-border px-2.5 py-0.5 text-xs rounded-full"
          >
            <span
              class="truncate"
            >
              Design
            </span>
          </div>
        </div>
        <div
          class="flex items-center justify-between"
        >
          <span>
            Mobile App
          </span>
          <div
            class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80 px-2.5 py-0.5 text-xs rounded-full"
          >
            <span
              class="truncate"
            >
              Development
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="items-center p-6 pt-0 flex justify-between"
    >
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
      >
        View All
      </button>
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      >
        New Project
      </button>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Cross-platform Consistency > should match component integration screenshot 1`] = `
<div
  class="p-4 bg-gray-50"
>
  <div
    class="grid grid-cols-1 md:grid-cols-2 gap-4 max-w-4xl"
  >
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm border-border"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <div
          class="flex items-center justify-between"
        >
          <h3
            class="text-2xl font-semibold leading-none tracking-tight"
          >
            User Profile
          </h3>
          <div
            class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80 px-2.5 py-0.5 text-xs rounded-full"
          >
            <span
              class="truncate"
            >
              Active
            </span>
          </div>
        </div>
        <p
          class="text-sm text-muted-foreground"
        >
          Manage your account settings
        </p>
      </div>
      <div
        class="p-6 pt-0 space-y-3"
      >
        <div
          class="relative w-full"
        >
          <label
            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 mb-2 block"
            for="«rc»"
          >
            Display Name
          </label>
          <div
            class="relative"
          >
            <div
              class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
            >
              <span
                class="text-muted-foreground"
              >
                <span>
                  👤
                </span>
              </span>
            </div>
            <input
              class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2 pl-10"
              id="«rc»"
              value="John Doe"
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <label
            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 mb-2 block"
            for="«rd»"
          >
            Email
          </label>
          <div
            class="relative"
          >
            <div
              class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
            >
              <span
                class="text-muted-foreground"
              >
                <span>
                  ✉️
                </span>
              </span>
            </div>
            <input
              class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2 pl-10"
              id="«rd»"
              type="email"
              value="john@example.com"
            />
          </div>
        </div>
      </div>
      <div
        class="items-center p-6 pt-0 flex justify-between"
      >
        <button
          class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
        >
          Cancel
        </button>
        <button
          class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
        >
          Save Changes
        </button>
      </div>
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm border-border"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight"
        >
          Project Status
        </h3>
        <p
          class="text-sm text-muted-foreground"
        >
          Current project overview
        </p>
      </div>
      <div
        class="p-6 pt-0"
      >
        <div
          class="space-y-2"
        >
          <div
            class="flex items-center justify-between"
          >
            <span>
              Website
            </span>
            <div
              class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80 px-2.5 py-0.5 text-xs rounded-full"
            >
              <span
                class="truncate"
              >
                In Progress
              </span>
            </div>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <span>
              Mobile App
            </span>
            <div
              class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80 px-2.5 py-0.5 text-xs rounded-full"
            >
              <span
                class="truncate"
              >
                Planning
              </span>
            </div>
          </div>
          <div
            class="flex items-center justify-between"
          >
            <span>
              API
            </span>
            <div
              class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground hover:bg-destructive/80 px-2.5 py-0.5 text-xs rounded-full"
            >
              <span
                class="truncate"
              >
                Blocked
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex items-center p-6 pt-0"
      >
        <button
          class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
        >
          View Details
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Dark Mode Screenshots > should match dark mode components screenshot 1`] = `
<div
  class="p-4 bg-slate-900 text-white"
>
  <div
    class="space-y-4"
  >
    <div
      class="space-x-2"
    >
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      >
        Default
      </button>
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-destructive text-destructive-foreground hover:bg-destructive/90 h-10 px-4 py-2"
      >
        Destructive
      </button>
      <button
        class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
      >
        Outline
      </button>
    </div>
    <div
      class="rounded-lg border bg-card text-card-foreground shadow-sm border-border"
    >
      <div
        class="flex flex-col space-y-1.5 p-6"
      >
        <h3
          class="text-2xl font-semibold leading-none tracking-tight text-white"
        >
          Dark Card
        </h3>
        <p
          class="text-sm text-muted-foreground text-slate-300"
        >
          Card in dark theme
        </p>
      </div>
      <div
        class="p-6 pt-0"
      >
        <div
          class="relative w-full"
        >
          <div
            class="relative"
          >
            <input
              class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2 bg-slate-700 border-slate-600 text-white"
              id="«re»"
              placeholder="Dark input..."
            />
          </div>
        </div>
      </div>
      <div
        class="flex items-center p-6 pt-0"
      >
        <button
          class="inline-flex items-center justify-center rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
        >
          Dark Action
        </button>
      </div>
    </div>
    <div
      class="flex gap-2"
    >
      <div
        class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground hover:bg-primary/80 px-2.5 py-0.5 text-xs rounded-full"
      >
        <span
          class="truncate"
        >
          Dark Badge
        </span>
      </div>
      <div
        class="inline-flex items-center border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground border-border px-2.5 py-0.5 text-xs rounded-full"
      >
        <span
          class="truncate"
        >
          Dark Outline
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visual Regression Tests > Input Component Screenshots > should match input form screenshot 1`] = `
<div
  class="p-4 bg-white"
>
  <form
    class="space-y-4 w-80"
  >
    <div>
      <div
        class="relative w-full"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 mb-2 block"
          for="«r8»"
        >
          First Name
        </label>
        <div
          class="relative"
        >
          <input
            class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2"
            id="«r8»"
            placeholder="Enter first name..."
            value="John"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="relative w-full"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 mb-2 block"
          for="«r9»"
        >
          Email
        </label>
        <div
          class="relative"
        >
          <div
            class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
          >
            <span
              class="text-muted-foreground"
            >
              <span>
                ✉️
              </span>
            </span>
          </div>
          <input
            class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2 pl-10"
            id="«r9»"
            placeholder="Enter email..."
            type="email"
            value="john@example.com"
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="relative w-full"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 mb-2 block"
          for="«ra»"
        >
          Phone
        </label>
        <div
          class="relative"
        >
          <input
            aria-describedby="«ra»-helper"
            class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2"
            id="«ra»"
            placeholder="Enter phone..."
            type="tel"
          />
        </div>
        <p
          class="mt-1 text-xs text-muted-foreground"
          id="«ra»-helper"
        >
          Include country code
        </p>
      </div>
    </div>
    <div>
      <div
        class="relative w-full"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 mb-2 block text-destructive"
          for="«rb»"
        >
          Password
        </label>
        <div
          class="relative"
        >
          <input
            aria-describedby="«rb»-helper"
            class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 border-destructive focus-visible:ring-destructive h-10 px-3 py-2"
            id="«rb»"
            placeholder="Enter password..."
            type="password"
          />
        </div>
        <p
          class="mt-1 text-xs text-destructive"
          id="«rb»-helper"
        >
          Password must be at least 8 characters
        </p>
      </div>
    </div>
  </form>
</div>
`;

exports[`Visual Regression Tests > Input Component Screenshots > should match input variants screenshot 1`] = `
<div
  class="p-4 space-y-4 bg-white w-80"
>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <input
        class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2"
        id="«r0»"
        placeholder="Default input"
      />
    </div>
  </div>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <input
        class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2"
        id="«r1»"
        placeholder="Email input"
        type="email"
      />
    </div>
  </div>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <input
        class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2"
        disabled=""
        id="«r2»"
        placeholder="Disabled input"
      />
    </div>
  </div>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <input
        class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 border-destructive focus-visible:ring-destructive h-10 px-3 py-2"
        id="«r3»"
        placeholder="Error input"
      />
    </div>
  </div>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <div
        class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
      >
        <span
          class="text-muted-foreground"
        >
          <span>
            🔍
          </span>
        </span>
      </div>
      <input
        class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2 pl-10"
        id="«r4»"
        placeholder="With left icon"
      />
    </div>
  </div>
  <div
    class="relative w-full"
  >
    <div
      class="relative"
    >
      <input
        class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2 pr-10"
        id="«r5»"
        placeholder="With right icon"
      />
      <div
        class="absolute inset-y-0 right-0 flex items-center pr-3 pointer-events-none"
      >
        <span
          class="text-muted-foreground"
        >
          <span>
            ✓
          </span>
        </span>
      </div>
    </div>
  </div>
  <div>
    <div
      class="relative w-full"
    >
      <label
        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 mb-2 block"
        for="«r6»"
      >
        Complete Input
      </label>
      <div
        class="relative"
      >
        <input
          aria-describedby="«r6»-helper"
          class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 h-10 px-3 py-2"
          id="«r6»"
          placeholder="With label and helper"
        />
      </div>
      <p
        class="mt-1 text-xs text-muted-foreground"
        id="«r6»-helper"
      >
        This is helper text
      </p>
    </div>
  </div>
  <div>
    <div
      class="relative w-full"
    >
      <label
        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 mb-2 block text-destructive"
        for="«r7»"
      >
        Error Input
      </label>
      <div
        class="relative"
      >
        <input
          aria-describedby="«r7»-helper"
          class="flex w-full rounded-md border border-input bg-background text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 border-destructive focus-visible:ring-destructive h-10 px-3 py-2"
          id="«r7»"
          placeholder="With error state"
        />
      </div>
      <p
        class="mt-1 text-xs text-destructive"
        id="«r7»-helper"
      >
        This is an error message
      </p>
    </div>
  </div>
</div>
`;
